[gd_scene load_steps=3 format=3 uid="uid://dcs3ocqukin1k"]

[ext_resource type="Script" uid="uid://s5lmoucanwim" path="res://src/ui/player_ui.gd" id="1_354od"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_354od"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.099986, 0.099986, 0.0999859, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PlayerUI" type="PanelContainer"]
offset_right = 341.0
offset_bottom = 91.0
theme_override_styles/panel = SubResource("StyleBoxFlat_354od")
script = ExtResource("1_354od")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TimelineSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 3.0
step = 0.01389
editable = false

[node name="StartTick" type="ColorRect" parent="VBoxContainer/TimelineSlider"]
layout_mode = 0
offset_top = 15.0
offset_right = 5.0
offset_bottom = 30.0
color = Color(0, 1, 0, 1)

[node name="EndTick" type="ColorRect" parent="VBoxContainer/TimelineSlider"]
layout_mode = 0
offset_left = 295.0
offset_top = 15.0
offset_right = 300.0
offset_bottom = 30.0
color = Color(1, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stop"

[connection signal="value_changed" from="VBoxContainer/TimelineSlider" to="." method="_on_timeline_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StopButton" to="." method="stop"]
